# caro

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/controllers/: fastapi.py
backend/app/controllers/endpoints/: ask.py  system.py
backend/app/entities/: product.py
backend/app/infrastructure/external_scrapers/: ai_screenshot.py
backend/app/interfaces/: database.py  product.py  scraper.py  service.py
backend/app/system/: settings.py
backend/app/use_cases/responders/: ai_screenshot.py
