[tool.poetry]
name = "caro"
version = "0.1.0"
description = ""
authors = ["am1ter"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
structlog = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
